--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,13 @@
   font-family: "Lexend", sans-serif;
   font-weight: 500;
   font-size: 14px;
-  color: black;
+  color: #5b5862;
   text-decoration: none;
 }
 .drop-btn{
-  border-radius: 20px !important;
-  padding: 8px 15px !important;
-  background-color: black !important;
+  border-radius: 8px !important;
+  padding: 10px 26px !important;
+  background-color: #5928e5 !important;
   color: white !important;
   font-weight: 500 !important;
   font-size: 13px !important;
@@ -32,16 +32,46 @@
     top: 20px;
 }
 .task_box{
-  border: 4px solid black;
+  border: 2px solid #5928e5;
   padding: 25px 15px;
   border-radius: 15px;
   margin-top: 40px;
   display: none;
+  box-shadow: 0px 0px 5px  #5a28e5aa inset;
 }
 .task{
-  border: 3px solid black;
-  border-radius: 10px;
+  border: 1px solid #e8e7e9;
+  border-radius: 8px;
   padding: 0 0 20px 0px;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+.task:hover img {
+  transform: scale(.9);
+}
+.task img,
+.task div,
+.task a {
+  transition: all 300ms linear;
+}
+.task::after{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(93deg, #5928e5 -12.4%, #df37e7 48.01%, #f15156 107.96%);
+  left: -99%;
+  top: 0;
+  content: "";
+  z-index: -1;
+  transition: all 300ms linear;
+}
+.task:hover::after{
+  left: 0;
+}
+.task:hover div,
+.task:hover a {
+  color: white;
 }
 .task-page-img{
   width: 100%;
@@ -51,10 +81,12 @@
 .month-name{
   font-size: 50px;
   font-weight: 900;
-  color: grey;
+  color: white;
+  background: linear-gradient(93deg, #5928e5 -12.4%, #df37e7 48.01%, #f15156 107.96%);
+  border-radius: 8px;
 }
 .cm-name{
-  color: blue ;
+  color: rgb(89, 40, 229) ;
   text-align: center;
   font-weight: 800;
   font-family: "Lexend", sans-serif;
@@ -92,7 +124,7 @@ margin-top: 80px;
   }
   .drop-btn{
     padding: 10px 25px !important;
-    font-size: 15px !important;
+    font-size: 14px !important;
   }
   .profile-name{
     font-size: 14px;
