--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,17 +54,18 @@
 }
 .task::after{
   position: absolute;
-  width: 1%;
-  height: 100%;
+  width: 100%;
+  height: 1%;
   background: linear-gradient(93deg, #5928e5 -12.4%, #df37e7 48.01%, #f15156 107.96%);
   left: 0%;
   top: 0;
+  bottom: -99%;
   content: "";
   z-index: -1;
   transition: all 300ms linear;
 }
 .task:hover::after{
-  width: 100%;
+  height: 100%;
 }
 .task:hover div,
 .task:hover a {
@@ -143,6 +144,14 @@ margin-top: 80px;
     width: 300px;
     height: 200px;
     border-radius: 6px;
+  }
+  .task::after{
+    position: absolute;
+    width: 1%;
+    height: 100%;
+  }
+  .task:hover::after{
+    width: 100%;
   }
   .task{
     padding: 0 0 0 15px;
